Source/WebCore/page/Settings.h
@@ -270,6 +270,9 @@ public:
 
     static void setShouldOptOutOfNetworkStateObservation(bool flag) { gShouldOptOutOfNetworkStateObservation = flag; }
     static bool shouldOptOutOfNetworkStateObservation() { return gShouldOptOutOfNetworkStateObservation; }
+
+    static void setShouldManageAudioSession(bool flag) { gManageAudioSession = flag; }
+    static bool shouldManageAudioSession() { return gManageAudioSession; }
 #endif
 
 private:
@@ -351,6 +354,7 @@ private:
     static bool gNetworkDataUsageTrackingEnabled;
     static bool gAVKitEnabled;
     static bool gShouldOptOutOfNetworkStateObservation;
+    static bool gManageAudioSession;
 #endif
 
     static double gHiddenPageDOMTimerAlignmentInterval;
