Source/WebCore/platform/audio/ios/AudioSessionIOS.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2014 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -28,6 +28,7 @@
 
 #if USE(AUDIO_SESSION) && PLATFORM(IOS)
 
+#import "Logging.h"
 #import "SoftLinking.h"
 #import <AVFoundation/AVAudioSession.h>
 #import <objc/runtime.h>
@@ -104,6 +105,26 @@ SOFT_LINK_POINTER(AVFoundation, AVAudioSessionInterruptionNotification, NSString
 
 namespace WebCore {
 
+
+#if !LOG_DISABLED
+static const char* categoryName(AudioSession::CategoryType category)
+{
+#define CASE(category) case AudioSession::category: return #category
+    switch (category) {
+        CASE(None);
+        CASE(AmbientSound);
+        CASE(SoloAmbientSound);
+        CASE(MediaPlayback);
+        CASE(RecordAudio);
+        CASE(PlayAndRecord);
+        CASE(AudioProcessing);
+    }
+    
+    ASSERT_NOT_REACHED();
+    return "";
+}
+#endif
+
 class AudioSessionPrivate {
 public:
     AudioSessionPrivate(AudioSession*);
@@ -128,18 +149,14 @@ AudioSession::~AudioSession()
 
 void AudioSession::setCategory(CategoryType newCategory)
 {
-    if (categoryOverride() && categoryOverride() != newCategory)
-        return;
+    LOG(Media, "AudioSession::setCategory() - category = %s", categoryName(newCategory));
 
-    if (!categoryOverride()) {
-        // If a page plays only WebAudio we set the audio category to "ambient" so it is muted by the ringer switch.
-        // However, audio from an HTML5 media element or from a plug-in should always play as "media" so don't change the
-        // category once it has already been set to media.
-        if (newCategory == AudioSession::AmbientSound && category() == AudioSession::MediaPlayback)
-            return;
+    if (categoryOverride() && categoryOverride() != newCategory) {
+        LOG(Media, "AudioSession::setCategory() - override set, NOT changing");
+        return;
     }
 
-    NSString* categoryString;
+    NSString *categoryString;
     switch (newCategory) {
     case AmbientSound:
         categoryString = AVAudioSessionCategoryAmbient;
@@ -171,7 +188,7 @@ void AudioSession::setCategory(CategoryType newCategory)
 
 AudioSession::CategoryType AudioSession::category() const
 {
-    NSString* categoryString = [[AVAudioSession sharedInstance] category];
+    NSString *categoryString = [[AVAudioSession sharedInstance] category];
     if ([categoryString isEqual:AVAudioSessionCategoryAmbient])
         return AmbientSound;
     if ([categoryString isEqual:AVAudioSessionCategorySoloAmbient])
